# atlan-sap-hana-app

./: README.md  extension-manifest.yaml  main.py  pyproject.toml
app/: __init__.py
app/activities/: __init__.py  sap_hana_activities.py  sap_hana_extraction.py
app/clients/: __init__.py  sap_hana_client.py
app/handlers/: __init__.py  sap_hana_handler.py
app/models/: __init__.py  sap_hana_models.py
app/scripts/: __init__.py  calc_view_lineage_extractor.py  parse_calc_view_column_lineage.py  parse_calc_view_lineage.py  process_calc_view_lineage.py  process_calculation_view.py  utils.py
app/sql/: client_version.sql  extract_calc_view.sql  extract_calc_view_column.sql  extract_calculation_view.sql  extract_calculation_view_column.sql  extract_column.sql  extract_database.sql  extract_procedure.sql  extract_schema.sql  extract_table.sql  extract_view.sql  metadata.sql  tables_check.sql  test_auth.sql
app/transformers/: __init__.py  sap_hana_transformer.py
app/transformers/templates/: calc-view-column-lineage.yaml  calc-view-lineage.yaml  calculation-view-column.yaml  calculation-view.yaml  column-lineage.yaml  column.yaml  database.yaml  lineage.yaml  procedure.yaml  schema.yaml  table.yaml  view.yaml
app/utils/: __init__.py  sap_hana_utils.py
app/workflows/: __init__.py  sap_hana_extraction.py  sap_hana_workflow.py
