[project]
name = "sap-hana-extraction"
version = "1.0.0"
description = "SAP HANA metadata extraction application"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
dependencies = [
    "atlan-application-sdk[workflows,daft,sqlalchemy]>=0.1.1rc5",
    "fastapi[standard]>=0.115.0",
    "hdbcli>=2.16.26",
    "sqlalchemy-hana>=0.5.0",
    "python-dotenv>=1.1.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Development dependencies
[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "isort>=5.13.2",
    "watchdog>=6.0.0",
]
test = [
    "pytest>=8.3.3",
    "coverage>=7.6.1",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.98.8",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false 